[gd_scene load_steps=3 format=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color(0.05, 0.05, 0.08, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8

[ext_resource type="Script" path="res://scripts/Game.gd" id=1]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.07, 1.0)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_right = 1.0
offset_left = 0.0
offset_top = 8.0
offset_right = 0.0
offset_bottom = 56.0
alignment = 1

[node name="EscalationBar" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="StageApproach" type="Label" parent="TopBar/EscalationBar"]
text = "Approach"

[node name="StageCloseQuarters" type="Label" parent="TopBar/EscalationBar"]
text = "Close Quarters"
modulate = Color(0.7, 0.7, 0.7, 1.0)

[node name="StageEmbrace" type="Label" parent="TopBar/EscalationBar"]
text = "Embrace"
modulate = Color(0.7, 0.7, 0.7, 1.0)

[node name="StageIntimacy" type="Label" parent="TopBar/EscalationBar"]
text = "Intimacy"
modulate = Color(0.7, 0.7, 0.7, 1.0)

[node name="PlayerStatusPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 280.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("1")

[node name="PlayerStatusLabel" type="RichTextLabel" parent="PlayerStatusPanel"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
bbcode_enabled = false
scroll_active = false

[node name="SarahStatusPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("1")

[node name="SarahStatusLabel" type="RichTextLabel" parent="SarahStatusPanel"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
bbcode_enabled = false
scroll_active = false
fit_content_height = true

[node name="ActionLogPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -220.0
offset_right = 320.0
offset_bottom = -16.0
theme_override_styles/panel = SubResource("1")

[node name="RecentLabel" type="Label" parent="ActionLogPanel"]
layout_mode = 2
anchor_right = 1.0
offset_left = 8.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = 24.0
text = "RECENT ACTIONS"

[node name="ActionLog" type="RichTextLabel" parent="ActionLogPanel"]
layout_mode = 2
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 24.0
offset_right = -8.0
offset_bottom = -8.0
scroll_active = true

[node name="BottomCards" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = -160.0
offset_right = -150.0
offset_bottom = -16.0
theme_override_styles/panel = SubResource("1")

[node name="CardScroll" type="ScrollContainer" parent="BottomCards"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
horizontal_scroll_mode = 1

[node name="CardContainer" type="HBoxContainer" parent="BottomCards/CardScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomRightPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -150.0
offset_right = -16.0
offset_bottom = -16.0
theme_override_styles/panel = SubResource("1")

[node name="TurnLabel" type="Label" parent="BottomRightPanel"]
layout_mode = 2
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 28.0
text = "Turn 1"

[node name="DeckInfoLabel" type="Label" parent="BottomRightPanel"]
layout_mode = 2
anchor_right = 1.0
offset_left = 8.0
offset_top = 32.0
offset_right = -8.0
offset_bottom = 52.0
text = "Deck info"

[node name="EndTurnButton" type="Button" parent="BottomRightPanel"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 64.0
offset_right = -40.0
offset_bottom = -16.0
text = "End Turn"

[node name="GameOverPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
visible = false
theme_override_styles/panel = SubResource("1")

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
horizontal_alignment = 1
vertical_alignment = 1
text = "Game Over"

[node name="PlayAgainButton" type="Button" parent="GameOverPanel"]
layout_mode = 2
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 8.0
offset_right = -50.0
offset_bottom = -8.0
text = "Play Again"
